# market-signal-lab

./: .gitignore  Makefile  README.md  pyproject.toml
config/: config.example.yaml
src/ai/: __init__.py  adapters.py
src/alerts/: __init__.py  manager.py  slack.py
src/api/: __init__.py  routes.py
src/app/: __init__.py  __main__.py  cli.py  config.py  logging.py
src/backtest/: __init__.py  engine.py  metrics.py  optimizer.py
src/data/: __init__.py  import_local.py  ingest.py
src/data/providers/: __init__.py  alternative.py  base.py  kraken.py  yahoo_daily.py  yfinance_provider.py
src/data/storage/: __init__.py  duckdb_store.py  parquet_store.py
src/indicators/: __init__.py  core.py
src/ml/: __init__.py  features.py  models.py  scorer.py  trade_learner.py
src/paper/: __init__.py  simulator.py
src/screener/: __init__.py  scanner.py
src/signals/: __init__.py  engine.py
src/strategies/: __init__.py  base.py  donchian_breakout.py  rsi_mean_reversion.py  sma_crossover.py
src/ui/: __init__.py
src/ui/static/: app.js
src/ui/templates/: _backtest_results.html  asset_detail.html  backtest.html  base.html  screener.html  simulate.html  simulate_detail.html  watchlist.html
tests/: conftest.py  test_backtest.py  test_engine_behaviors.py  test_indicators.py  test_storage.py  test_strategies.py
